@@ -512,7 +512,7 @@ Besides field/property validation OVal implements Programming by Contract featur
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
-				<!-- 1.3 seems to be broken, getting "cannot find symbol" errors -->
+				<!-- 1.3 and 1.3.1 seems to be broken, getting "cannot find symbol" errors -->
 				<version>1.2</version>
 				<executions>
 					<execution>
@@ -634,11 +634,23 @@ Besides field/property validation OVal implements Programming by Contract featur
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.2.1</version>
 				<configuration>
 					<descriptors>
-						<descriptor>${basedir}/src/main/assembly/sources.xml</descriptor>
 						<descriptor>${basedir}/src/main/assembly/archive-with-dependencies.xml
 						</descriptor>
 						<descriptor>${basedir}/src/main/assembly/archive-without-dependencies.xml
@@ -723,7 +735,7 @@ Besides field/property validation OVal implements Programming by Contract featur
 				<!-- Generate a report based on the results of unit tests. -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.7</version>
+				<version>2.8</version>
 				<reportSets>
 					<reportSet>
 						<reports>
@@ -777,7 +789,7 @@ Besides field/property validation OVal implements Programming by Contract featur
 				<!-- FindBugs looks for bugs in Java programs -->
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.3.1</version>
+				<version>2.3.2</version>
 				<configuration>
 					<excludeFilterFile>${basedir}/src/misc/findbugs-exclude.xml</excludeFilterFile>
 					<xmlOutput>true</xmlOutput>
@@ -810,7 +822,7 @@ Besides field/property validation OVal implements Programming by Contract featur
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>clirr-maven-plugin</artifactId>
-				<version>2.2.3</version>
+				<version>2.3</version>
 			</plugin>
 		</plugins>
 	</reporting>
